# tools-service_discovery

./: CMakeLists.txt  INSTALL  README  Rakefile  avahi_0.6.25-1_amd64.deb  avahi_0.6.25-1_armel.deb  avahi_0.6.25-1_i386.deb  avahi_0.6.27-1_armel.deb  avahi_loopback_patch_avahiver_0_6_25.patch  manifest.xml
bindings/ruby/: CMakeLists.txt  servicediscovery_ruby.pc.in
bindings/ruby/ext/: ServiceDiscovery.cpp  extconf.rb
bindings/ruby/lib/: servicediscovery.rb
bindings/ruby/lib/servicediscovery/: core.rb
bindings/ruby/test/: test-service.rb  test.rb
cmake/: FindAVAHI.cmake  FindLog4Cxx.cmake  RubyExtensions.cmake
configuration/: service-discovery.pc.in
doc/: Doxyfile.in
examples/: CMakeLists.txt  browse-publish-update.cpp  browse-simplepoll.cpp  browse.cpp  examples  logging.cpp  publish.cpp  servicediscovery.cpp
ext/: ServiceDiscovery.cpp  extconf.rb
patches_0.6.25/: avahi_custom_ttl_patch_avahiver_0_6_25.patch
patches_0.6.27/: 0002-avahi-loopback-patch-avahiver-0_6_27.patch  0003-enable-ipv6-in-avahi-daemon.conf.patch  0004-avahi-custom-ttl-patch-avahiver-0_6_27.patch
scripts/: discover.rb  test.rb
src/: CMakeLists.txt  CMakeLists.txt~  OrocosComponentService.cpp  OrocosComponentService.h  ServiceConfiguration.cpp  ServiceConfiguration.h  ServiceDescription.cpp  ServiceDescription.h  ServiceDiscovery.cpp  ServiceDiscovery.h  ServiceDiscovery.hpp  ServiceEvent.cpp  ServiceEvent.h  ServicePattern.cpp  ServicePattern.h  ServicePublisher.cpp  ServicePublisher.h  TODO  afAvahiClient.cpp  afAvahiClient.cpp~  afAvahiClient.h  afAvahiClient.h~  afAvahiFramework.h  afConfigurator.cpp  afConfigurator.h  afList.cpp  afList.h  afList.h~  afLocalService.cpp  afLocalService.cpp~  afLocalService.h  afLocalService.h~  afLoggingWrapper.cpp  afLoggingWrapper.h  afPoll.cpp  afPoll.h  afPoll.h~  afRemoteService.cpp  afRemoteService.h  afRemoteService.h~  (+56 more)
src/examples/: Browse.cpp  BrowsePublishUpdate.cpp  CMakeLists.txt  Publish.cpp  ServiceDiscovery.cpp  Update.cpp  af-log.properties  browse-publish-update.cpp  browse-simplepoll.cpp  browse.cpp  logging.cpp  publish.cpp  servicediscovery.cpp  update.cpp
src/impl/avahi/: Client.cpp  Client.hpp  LocalService.cpp  LocalService.hpp  RemoteService.cpp  RemoteService.hpp  Service.cpp  Service.hpp  ServiceBrowser.cpp  ServiceBrowser.hpp  ServiceConfiguration.cpp  ServiceConfiguration.hpp  ServiceDescription.cpp  ServiceDescription.hpp  ServiceDiscovery.cpp  ServiceDiscovery.hpp  ServiceEvent.cpp  ServiceEvent.hpp  ServicePattern.cpp  ServicePattern.hpp
src/service_discovery/backward/service_discovery/: service_discovery.h
src/utils/: Browse.cpp  List.hpp  Publish.cpp  browse.cpp  publish.cpp
test/: CMakeLists.txt  configuration_test.cpp  discovery_test.cpp  search_pattern_test.cpp  test-service.rb  test.cpp  test.rb  testmain.cpp
